# operating-system

./: README.md
assignments/: CounterComparison.java  DiningPhilosophers.java  MatrixThreads.java  ParkingGarageSimulation.java  RaceConditionBank.java  assignment1.c  assignment2.c  pingpong.c
assignments/MatrixProject/: CMakeLists.txt  main.cpp  matrix_math.cpp  matrix_math.h  profile_main.cpp
assignments/final_project/: empty_file.txt
assignments/scripts/bash/: bigfile.sh  error_count.sh  healthsnapshot.sh  rename_text.sh  top_memory.sh
assignments/scripts/general/: class_lab.sh
assignments/scripts/powershell/: Bigfile.ps1  RenameTxt.ps1  TopMemory.ps1
scripts/powershell/: ErrorCount.ps1  HealthSnapshot.ps1
